# MedDataGuard

./: .env.example  .gitignore  PRD  README.md  docker-compose.yml  package-lock.json  pyproject.toml  pytest.ini  requirements-dev.txt
.github/workflows/: ci.yml
backend/: Dockerfile  requirements.txt
backend/app/: __init__.py  config.py  create_demo_dataset.py  database.py  drift.py  image_quality.py  leakage.py  main.py  mask_quality.py  reports.py  sample_store.py  scanner.py  schemas.py  utils.py
backend/tests/: conftest.py  test_image_quality.py  test_leakage.py  test_mask_quality.py  test_report_generator.py  test_scanner_smoke.py
benchmark/: generate_benchmark_summary.py  run_cholec_benchmark.py
core/: dataset_loader.py  drift_features.py  image_metrics.py  mask_metrics.py  perceptual_hash.py  pyproject.toml  report_generator.py  split_analysis.py
demo_data/: README.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/audits/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/drift/: page.tsx
frontend/app/image-quality/: page.tsx
frontend/components/: AuditSummaryCard.tsx  DistributionChart.tsx  DriftScatterPlot.tsx  IssueTable.tsx  Layout.tsx  LeakageClusterView.tsx  MetricCard.tsx  RiskBadge.tsx  SampleDetailPanel.tsx  SampleGrid.tsx
frontend/lib/: api.ts  types.ts  utils.ts
reports/: sample_audit_report.json  sample_audit_report.md
tests/: test_dataset_loader.py  test_mask_metrics.py  test_report_generator.py  test_split_analysis.py
(+23 files in other folders)
