[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meddataguard-core"
version = "0.1.0"
description = "Core dataset QA utilities for MedDataGuard."
readme = { file = "../README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.1",
  "pandas>=2.2",
  "Pillow>=10.4",
  "imagehash>=4.3",
  "scikit-learn>=1.5",
]

[tool.setuptools]
packages = ["core"]
